--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -45,6 +45,12 @@
           (click)="scrollToSection('projects')"
           >projects</span
         >
+        <span
+          class="menu__span"
+          data-color="primary-color"
+          (click)="scrollToSection('hero'); toggleSocialMedia($event);"
+          ><i class="fa-solid fa-share-nodes"></i></span
+        >
         <div class="themes">
           <div
             class="themes__list"
